--- a/Cars/appsettings.json
+++ b/Cars/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=localhost;Initial Catalog=Cars;User Id=sa;Password=ThisSh0uldBeG@@d;"
+  },
   "AllowedHosts": "*"
 }
