Imported list of cars Updated car table Updated car definition

--- a/Cars/appsettings.json
+++ b/Cars/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost;Initial Catalog=Cars;User Id=sa;Password=ThisSh0uldBeG@@d;"
+    "DefaultConnection": "Data Source=localhost;Initial Catalog=Cars;Integrated Security=true"
   },
   "AllowedHosts": "*"
 }
